--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,36 @@
 version: "3"
 
 services:
-  app:
+  goapp1:
     build:
       context: ./
       dockerfile: .setup/dev/Dockerfile
-    container_name: go_wbc
+    entrypoint:
+      [
+        'CompileDaemon',
+        '-directory=./',
+        '-build=go build -o weather-by-cep /app/main.go',
+        '-command=./weather-by-cep cep_validator',
+      ]
+    container_name: go_wbc1
     ports:
-      - 8083:8083
+      - 8081:8081
+    volumes:
+      - .:/app
+
+  goapp2:
+    build:
+      context: ./
+      dockerfile: .setup/dev/Dockerfile
+    entrypoint:
+      [
+        'CompileDaemon',
+        '-directory=./',
+        '-build=go build -o weather-by-cep /app/main.go',
+        '-command=./weather-by-cep wbc',
+      ]
+    container_name: go_wbc2
+    ports:
+      - 8082:8082
     volumes:
       - .:/app
